@@ -48,6 +48,7 @@ chain-vm		= org.apache.ivy.plugins.version.ChainVersionMatcher
 latest-vm  		= org.apache.ivy.plugins.version.LatestVersionMatcher
 sub-vm  		= org.apache.ivy.plugins.version.SubVersionMatcher
 range-vm		= org.apache.ivy.plugins.version.VersionRangeMatcher
+pattern-vm		= org.apache.ivy.plugins.version.PatternVersionMatcher
 
 ant-build		= org.apache.ivy.ant.AntBuildTrigger
 ant-call		= org.apache.ivy.ant.AntCallTrigger
